# PracticasED

./: CMakeLists.txt  Importante.txt  explicacion.txt
doc/: Doxyfile
doc/html/: _pais_8h_source.html  _paises_8h_source.html  _punto_8h.html  _punto_8h_source.html  _ruta_8h.html  _ruta_8h_source.html  almacen__rutas_8h.html  almacen__rutas_8h_source.html  annotated.html  class_imagen-members.html  class_imagen.html  class_pais-members.html  class_pais.html  class_paises-members.html  class_paises.html  class_paises_1_1const__iterator-members.html  class_paises_1_1const__iterator.html  class_paises_1_1iterator-members.html  class_paises_1_1iterator.html  class_punto-members.html  class_punto.html  class_ruta-members.html  class_ruta.html  class_ruta_1_1iterator-members.html  class_ruta_1_1iterator.html  classalmacen__rutas-members.html  classalmacen__rutas.html  classalmacen__rutas_1_1iterator-members.html  classalmacen__rutas_1_1iterator.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  (+8 more)
doc/latex/: _punto_8h.tex  _ruta_8h.tex  almacen__rutas_8h.tex  annotated.tex  class_imagen.tex  class_pais.tex  (+13 more)
include/: Pais.h  Paises.h  Punto.h  Ruta.h  almacen_rutas.h  imagen.h  imagenES.h
src/: Punto.cpp  Ruta.cpp  almacen_rutas.cpp  imagen.cpp  imagenES.cpp  rutas_aereas.cpp
tests/: modificarmascara.cpp  pruebaimagen.cpp  pruebapegado.cpp  pruebarotacion.cpp  pruebarutas.cpp
(+33 files in other folders)
